--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,7 @@
+
+body,.tab-bar{
+    background-color: #f9f9f9 !important;
+}
 /*Gird*/
 svg{
     display: auto;
@@ -123,13 +127,21 @@ svg{
     width: 0%;
 }
 .medium-1-customer{
-    width: 6%;
+    width: 43px;
 }
 .medium-3-customer{
     width: 35%;
 }
 .medium-11-customer{
-    width: 94%;
+    width: 96%;
+}
+.medium-12-customer{
+    width: 100%;
+}
+
+.padding-none{
+    width: 100%;
+    padding: 0;
 }
 
 #mapObjectInformationHzTable{
@@ -161,6 +173,11 @@ svg{
     margin-left: 0px;
     margin-right: 0px;
 }
+.panel {
+    border:none !important;
+    background: white !important;
+    color: #333333;
+}
 .map-content{
     margin-bottom: 10px;
     padding-right: 0px;
@@ -175,7 +192,7 @@ svg{
     padding-top: 5px;
 }
 .btn-showHideMap > i{
-    font-size: 24px;
+    font-size: 20px;
 }
 .main-section{
     padding-top: 10px;
@@ -214,10 +231,19 @@ svg{
     line-height: 17px;
 }
 
-.top-bar-section ul li > a{
-   height: 40px;
+.menu-icon-list{
+     height: 45px;
 }
 
+.use-case-menu{
+ background-color: black !important;
+}
+
+.side-nav > li > a{
+    color: white !important;
+    font-size: 20px !important;
+    padding-left: 10px !important;
+}
 input[type="search"],input[type="search"]:focus {
     background: #1abc9c;
     border-color: #1abc9c;
@@ -234,15 +260,40 @@ input[type="search"],input[type="search"]:focus {
     font-size: 24px;
 }
 
-.todo a::after {
-    background: none repeat scroll 0 0 #fff;
-    border-radius: 50%;
-    content: " ";
-    display: block;
-    height: 20px;
-    margin-top: -10px;
+
+
+.tooltip {
+    background: black;
+    color: #FFFFFF;
+    display: none;
+    font-size: 0.875rem;
+    font-weight: normal;
+    line-height: 1.3;
+    max-width: 300px;
+    padding: 0.75rem;
     position: absolute;
-    right: 22px;
-    top: 50%;
-    width: 20px;
-}
+    width: 100%;
+    z-index: 1006;
+    left: 50%; }
+.tooltip > .nub {
+    border-color: transparent transparent #333333 transparent;
+    border: solid 5px;
+    display: block;
+    height: 0;
+    pointer-events: none;
+    position: absolute;
+    top: -10px;
+    width: 0;
+    left: 5px; }
+.tooltip > .nub.rtl {
+    left: auto;
+    right: 5px; }
+.tooltip.radius {
+    border-radius: 3px; }
+.tooltip.round {
+    border-radius: 1000px; }
+.tooltip.round > .nub {
+    left: 2rem; }
+.tooltip.opened {
+    border-bottom: dotted 1px #003f54 !important;
+    color: #008CBA !important; }
