--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -56,8 +56,7 @@
                             </nav>
                             <aside class="right-off-canvas-menu">
                                 <div class="off-canvas-menu-title off-canvas-list">
-                                    <a href="#"></a>
-                                    <p><i class="fi-heart large" style="font-size: 24px"></i><span>Filter</span></p>
+                                    <strong><h5 class="title right" style="color: black !important;">Diagrams</h5></strong>
                                 </div>
                                 <div class="off-canvas-menu-content">
                                     <p><label>content</label></p>
