--- a/app/css/main.css
+++ b/app/css/main.css
@@ -174,9 +174,13 @@ svg{
     margin-right: 0px;
 }
 .panel {
-    border:none !important;
-    background: white !important;
-    color: #333333;
+    background-color: #ffffff !important;
+    border: 1px solid #e9e9e9!important;
+    border-bottom: 2px solid black !important;
+    border-radius: 4px !important;
+    padding: 10px !important;
+    box-shadow: 0px 0px 0px #bbbbbb;
+    transition: box-shadow 0.5s ease;
 }
 .map-content{
     margin-bottom: 10px;
@@ -233,6 +237,7 @@ svg{
 
 .menu-icon-list{
      height: 45px;
+    border-left: 1px solid white;
 }
 
 .use-case-menu{
