--- a/app/css/main.css
+++ b/app/css/main.css
@@ -306,3 +306,7 @@ input[type="search"],input[type="search"]:focus {
  .cityElement {
     float: none !important;
 }
+
+.filterEntry{
+    background-color: #008CBA;
+}
