--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -54,7 +54,18 @@
                                     <strong><h5 class="title right" style="color: black !important;">Diagrams</h5></strong>
                                 </div>
                                 <div class="off-canvas-menu-content">
-                                    <p><label>content</label></p>
+                                    <label>Datum</label>
+                                    <label class="apiControllEntry">Von:
+                                        <input type="text"  />
+                                    </label>
+                                    <label class="apiControllEntry">Bis:
+                                        <input type="text"  />
+                                    </label>
+                                    <label>Uhrzeit</label>
+                                    <input id="checkbox1" type="checkbox"><label for="checkbox1">6-10</label>
+                                    <input id="checkbox2" type="checkbox"><label for="checkbox2">10-16</label>
+                                    <input id="checkbox3" type="checkbox"><label for="checkbox3">16-22</label>
+                                    <a href="#" class="button">Request</a>
                                 </div>
                             </aside>
                             <section class="main-section diagrams-section">
