--- a/app/modules/map/partials/MapObjectInformationHorizontal.html
+++ b/app/modules/map/partials/MapObjectInformationHorizontal.html
@@ -19,7 +19,10 @@
                 height="240"
                 showXAxis="true"
                 margin="{left:30,top:10,bottom:30,right:0}"
-                showYAxis="true">
+                showYAxis="true"
+                showLegend="true" +
+                yAxisLabel="in %" +
+                xAxisLabel="average occupancy per weekday" +>
             <svg></svg>
         </nvd3-discrete-bar-chart>
     </div>
