--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -20,7 +20,10 @@
                 showXAxis="true"
                 interactive="true"
                 tooltips="true"
-                showYAxis="true">
+                showYAxis="true"
+                showLegend="true" +
+                yAxisLabel="in %" +
+                xAxisLabel="average occupancy per weekday" +>
             <svg></svg>
         </nvd3-discrete-bar-chart>
     </div>
