--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -23,7 +23,7 @@
                         </aside>
                         <!-- Map -->
                         <section class="main-section overlayMapInfo-section">
-                            <div class="small-12 columns panel">
+                            <div id="mapContainer" class="small-12 columns panel">
                                 <ol-map alt="Map ol-map"></ol-map>
                                 <div class="overlayMapInfo" ng-show="showOverlayMapInfo">
                                     <map-Object-Information  align="Horizontal"></map-Object-Information>
