--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -22,7 +22,7 @@
                 showYAxis="true"
                 showLegend="true" +
                 yAxisLabel="in %" +
-                xAxisLabel="average occupancy per weekday 2" +>
+                xAxisLabel="average occupancy per weekday" +>
             <svg></svg>
         </nvd3-discrete-bar-chart>
     </div>
