--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -22,8 +22,8 @@
                             <filter></filter>
                         </aside>
                         <!-- Map -->
-                        <section class="main-section overlayMapInfo-section">
-                            <div id="mapContainer" class="small-12 columns panel">
+                        <section  id="mapContainer" class="main-section overlayMapInfo-section panel" ng-style="addStyleToMap()" resize >
+                            <div class="small-12 columns">
                                 <ol-map alt="Map ol-map"></ol-map>
                                 <div class="overlayMapInfo" ng-show="showOverlayMapInfo">
                                     <map-Object-Information  align="Horizontal"></map-Object-Information>
@@ -68,24 +68,27 @@
                                     <a href="#" class="button">Request</a>
                                 </div>
                             </aside>
-                            <section class="main-section diagrams-section">
+                            <section class="main-section diagrams-section panel" ng-style="addStyleToMap()" resize>
                                 <div class="medium-12 columns">
                                     <div class="row">
                                         <div class="columns" ng-class="singleDiagramCSS">
-                                            <div class="panel callout">
+                                            <div class=" callout">
                                                 <h3>Overview</h3>
                                                 <div ng-controller="StatusPanelMainChartController">
+
                                                 <div ng-controller="StatusPanelChartOneController">
                                                     {{title}}
-                                                    <nvd3 options="options" data="data" api="api"></div>
+                                                    <nvd3 options="options" data="data" api="api">
+                                                </div>
                                                 <div ng-controller="StatusPanelChartTwoController">
                                                     {{title}}
                                                     <nvd3 options="options" data="data"> </div>
                                                 <div ng-controller="StatusPanelChartThreeController">
                                                     {{title}}
                                                     <nvd3 options="options" data="data"></nvd3>
-                                            </div>
                                                 </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
