--- a/app/css/main.css
+++ b/app/css/main.css
@@ -343,7 +343,6 @@ input[type="search"],input[type="search"]:focus {
 }
 
 ul.off-canvas-list li a {
-    border-bottom: 2px solid #000000;
     color: #000000;
     display: block;
     padding: 0.66667rem;
@@ -363,7 +362,7 @@ ul.off-canvas-list li  {
     -moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
     box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
     margin-bottom: 4px;
-    border-left: 10px solid #000;
+    border-left: 10px solid #008cba;
     -webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     -o-transition: all 300ms ease-in-out;
