--- a/app/modules/dashboard/partials/impressum.html
+++ b/app/modules/dashboard/partials/impressum.html
@@ -88,4 +88,5 @@ contained therein.</span></p>
 
     </div>
     <button class="button" ng-click="ok()">Close</button>
+    <a class="close-reveal-modal" ng-click="ok()">&#215;</a>
 </div>
