--- a/app/css/main.css
+++ b/app/css/main.css
@@ -63,6 +63,7 @@ svg{
 }
 .right-small {
     border: none !important;
+    width: auto;
 }
 .tab-bar-section-map {
     right: 0rem !important;
@@ -70,7 +71,8 @@ svg{
 /*off-canvas-menu*/
 
 .filterActive{
-    background-color: green;
+    background-color: #000000;
+    color: #ffffff !important;
 }
 .left-off-canvas-menu,.right-off-canvas-menu{
     background: #f9f9f9;
@@ -340,12 +342,53 @@ input[type="search"],input[type="search"]:focus {
     font-size: 12px !important;
 }
 
+ul.off-canvas-list li a {
+    color: #000000;
+    display: block;
+    padding: 0.66667rem;
+    transition: background 300ms ease;
+}
+
+ul.off-canvas-list li a:hover{
+    color: #ffffff;
+}
+
+ul.off-canvas-list li  {
+    width: 230px;
+    overflow: hidden;
+    display: block;
+    background: #fff;
+    -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    -moz-box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    margin-bottom: 4px;
+    border-left: 10px solid #008cba;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+}
+
+
+.filterEntry {
+    background-color: #ffffff;
+}
+.reveal-modal {
+    max-height: 33.1rem;
+    overflow: scroll;
+    top: 48px !important;
+    padding-left: 30px;
+    border-left: 20px solid #008cba;
+
+}
 
 @media only screen and (max-width: 64.0626em){
     .medium-11-customer{
         width: 92%;
     }
 }
+
 .chart
 {
     margin-top: 50px;
